rename package name from ts-parsec to typescript-parsec

--- a/packages/ts-parsec/package.json
+++ b/packages/ts-parsec/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-parsec",
+  "name": "typescript-parsec",
   "version": "0.1.0",
   "description": "TypeScript Parser Combinator",
   "private": false,
