--- a/packages/tspc-utilities/package.json
+++ b/packages/tspc-utilities/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tspc-utilities",
+  "name": "@microsoft/tspc-utilities",
   "version": "1.0.0",
   "description": "TypeScript Parser Combinator",
   "private": true,
@@ -23,6 +23,6 @@
     "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.9.6",
-    "tslint-shared": "^1.0.0"
+    "@microsoft/tslint-shared": "^1.0.0"
   }
 }
